--- a/index.html
+++ b/index.html
@@ -5,11 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Google Fonts</title>
+    <title>Anywhere workers</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Karla&family=Spectral:wght@600&display=swap');
+        </style>
 </head>
 
+
 <body>
+    <h1>Anywhere<br> Workers</h1>
+        <p>There’s a new generation of workers who won’t be tied to any one place. 
+            They can’t be restricted by the confines of an office, or bound by the standard 9-5. 
+            The future of work is anywhere.</p>
+        <p class="read-more">Read more about this growing trend in our study</p>
+        <a href="#">Watch video</a>
 
 </body>
 
